cleanup sonart / linter issues